--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ https://templatemo.com/tm-585-barber-shop
                                             <p class="mb-0 ms-2">1acc</p>
                                             <ul class="social-icon ms-2">
                                                 <li class="social-icon-item">
-                                                    <a href="https://drive.google.com/file/d/1JLAimG0jYPx-EyR9CGe3LXEFzz4Q6H9t/view?usp=sharing" class="social-icon-link bi-arrow-down-circle">
+                                                    <a href="https://drive.google.com/file/d/1JLAimG0jYPx-EyR9CGe3LXEFzz4Q6H9t/view?usp=sharing" target="_blank" class="social-icon-link bi-arrow-down-circle">
                                                     </a>
                                                 </li>
                                             </ul>
