--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ https://templatemo.com/tm-585-barber-shop
                                             <p class="mb-0 ms-2">1acc</p>
                                             <ul class="social-icon ms-2">
                                                 <li class="social-icon-item">
-                                                    <a href="https://drive.google.com/file/d/1AqjGECqkCHs3CG7odsfs6cVi-mvIe1YD/view?usp=sharing" target="_blank" class="social-icon-link bi-arrow-down-circle">
+                                                    <a href="https://drive.google.com/file/d/1D9wITEBsF7OM-zr902OVhn4NYcdrN6Df/view?usp=sharing" target="_blank" class="social-icon-link bi-arrow-down-circle">
                                                     </a>
                                                 </li>
                                             </ul>
@@ -241,7 +241,7 @@ https://templatemo.com/tm-585-barber-shop
                                             <p class="mb-0 ms-2">1acc</p>
                                             <ul class="social-icon ms-2">
                                                 <li class="social-icon-item">
-                                                    <a href="https://drive.google.com/file/d/1D9wITEBsF7OM-zr902OVhn4NYcdrN6Df/view?usp=sharing" target="_blank" class="social-icon-link bi-arrow-down-circle">
+                                                    <a href="#" target="_blank" class="social-icon-link bi-arrow-down-circle">
                                                     </a>
                                                 </li>
                                             </ul>
