--- a/index.html
+++ b/index.html
@@ -216,30 +216,30 @@ https://templatemo.com/tm-585-barber-shop
                                     <h6 class="mb-5">Auto Farm Xu + Gỗ + Quặng + Nước</h6>   
                                     <h5 class="mb-5">Phiên bản Mỏ 4</h5>
                                         <div class="btn-group">
-                                            <a href="https://drive.google.com/file/d/1D9wITEBsF7OM-zr902OVhn4NYcdrN6Df/view?usp=sharing"  target="_blank" class="btn btn-outline-primary btn-lg " aria-current="page"> 1 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
-                                            <a href="https://drive.google.com/file/d/1HOLBFt2LXrIbsEkE9VsiLW5VWswz8ARv/view?usp=sharing"  target="_blank" class="btn btn-outline-primary btn-lg " aria-current="page"> 2 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
-                                            <a href="https://drive.google.com/file/d/1o5QGSyHQt9cy01iIJtEXhBHUKMhVGxTU/view?usp=sharing"  target="_blank" class="btn btn-outline-primary btn-lg " aria-current="page"> 4 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
-                                            <a href="https://drive.google.com/file/d/1apXWQWt3ceWwBzXSt4rKvUxbv7ZTTBFc/view?usp=sharing"  target="_blank" class="btn btn-outline-primary btn-lg " aria-current="page"> 6 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
-                                            <a href="https://drive.google.com/file/d/1D-reYKG8SezKbINkHx97hE_eS37AK4aP/view?usp=sharing"  target="_blank" class="btn btn-outline-primary btn-lg " aria-current="page"> 8 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
-                                            <a href="https://drive.google.com/file/d/1BTEsA0SGuwnvHnnmYKjvKPexPIyM5cbQ/view?usp=sharing"  target="_blank" class="btn btn-outline-primary btn-lg " aria-current="page"> 10 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
-                                            <a href="https://drive.google.com/file/d/14JyXtasvctAvCVO96oCvAPP_MExWPspo/view?usp=sharing"  target="_blank" class="btn btn-outline-primary btn-lg " aria-current="page"> 12 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
+                                            <a href="https://drive.google.com/file/d/1D9wITEBsF7OM-zr902OVhn4NYcdrN6Df/view?usp=sharing"  target="_blank" class="btn btn-outline-primary btn-sm " aria-current="page"> 1 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
+                                            <a href="https://drive.google.com/file/d/1HOLBFt2LXrIbsEkE9VsiLW5VWswz8ARv/view?usp=sharing"  target="_blank" class="btn btn-outline-primary btn-sm " aria-current="page"> 2 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
+                                            <a href="https://drive.google.com/file/d/1o5QGSyHQt9cy01iIJtEXhBHUKMhVGxTU/view?usp=sharing"  target="_blank" class="btn btn-outline-primary btn-sm " aria-current="page"> 4 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
+                                            <a href="https://drive.google.com/file/d/1apXWQWt3ceWwBzXSt4rKvUxbv7ZTTBFc/view?usp=sharing"  target="_blank" class="btn btn-outline-primary btn-sm " aria-current="page"> 6 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
+                                            <a href="https://drive.google.com/file/d/1D-reYKG8SezKbINkHx97hE_eS37AK4aP/view?usp=sharing"  target="_blank" class="btn btn-outline-primary btn-sm " aria-current="page"> 8 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
+                                            <a href="https://drive.google.com/file/d/1BTEsA0SGuwnvHnnmYKjvKPexPIyM5cbQ/view?usp=sharing"  target="_blank" class="btn btn-outline-primary btn-sm " aria-current="page"> 10 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
+                                            <a href="https://drive.google.com/file/d/14JyXtasvctAvCVO96oCvAPP_MExWPspo/view?usp=sharing"  target="_blank" class="btn btn-outline-primary btn-sm " aria-current="page"> 12 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
                                         </div>
                                         
                                     <h5 class="mb-5 mt-5">Phiên bản Mỏ 5- đang  update</h5>
                                     <div class="btn-group">
-                                        <a href="#"  target="_blank" class="btn btn-outline-primary btn-lg " aria-current="page"> 1 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
-                                        <a href="#"  target="_blank" class="btn btn-outline-primary btn-lg " aria-current="page"> 2 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
-                                        <a href="#"  target="_blank" class="btn btn-outline-primary btn-lg " aria-current="page"> 4 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
-                                        <a href="#"  target="_blank" class="btn btn-outline-primary btn-lg " aria-current="page"> 6 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
-                                        <a href="#"  target="_blank" class="btn btn-outline-primary btn-lg " aria-current="page"> 8 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
-                                        <a href="#"  target="_blank" class="btn btn-outline-primary btn-lg " aria-current="page"> 10 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
-                                        <a href="#"  target="_blank" class="btn btn-outline-primary btn-lg " aria-current="page"> 12 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
+                                        <a href="#"  target="_blank" class="btn btn-outline-primary btn-sm " aria-current="page"> 1 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
+                                        <a href="#"  target="_blank" class="btn btn-outline-primary btn-sm " aria-current="page"> 2 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
+                                        <a href="#"  target="_blank" class="btn btn-outline-primary btn-sm " aria-current="page"> 4 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
+                                        <a href="#"  target="_blank" class="btn btn-outline-primary btn-sm " aria-current="page"> 6 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
+                                        <a href="#"  target="_blank" class="btn btn-outline-primary btn-sm " aria-current="page"> 8 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
+                                        <a href="#"  target="_blank" class="btn btn-outline-primary btn-sm " aria-current="page"> 10 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
+                                        <a href="#"  target="_blank" class="btn btn-outline-primary btn-sm " aria-current="page"> 12 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
                                     </div>
                                     <h6 class="mb-5 mt-5">Dò Map</h6>
                                     <div class="btn-group">
-                                        <a href="https://drive.google.com/file/d/131nzQWbOURs3Sf00eOEGqThEWzFk2BZA/view?usp=sharing"  target="_blank" class="btn btn-outline-primary btn-lg " aria-current="page"> 1 ACC <i class="bi bi-cloud-arrow-down "></i></a>
-                                        <a href="https://drive.google.com/file/d/1JgAzA-ER6hklGHdJ56HdYcjdawgVrlyg/view?usp=sharing"  target="_blank" class="btn btn-outline-primary btn-lg" aria-current="page"> 2 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
-                                        <a href="https://drive.google.com/file/d/1eu221FSis-wivMKqC_Z9nuwrAcqGm912/view?usp=sharing"  target="_blank" class="btn btn-outline-primary btn-lg" aria-current="page"> 4 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
+                                        <a href="https://drive.google.com/file/d/131nzQWbOURs3Sf00eOEGqThEWzFk2BZA/view?usp=sharing"  target="_blank" class="btn btn-outline-primary btn-sm " aria-current="page"> 1 ACC <i class="bi bi-cloud-arrow-down "></i></a>
+                                        <a href="https://drive.google.com/file/d/1JgAzA-ER6hklGHdJ56HdYcjdawgVrlyg/view?usp=sharing"  target="_blank" class="btn btn-outline-primary btn-sm" aria-current="page"> 2 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
+                                        <a href="https://drive.google.com/file/d/1eu221FSis-wivMKqC_Z9nuwrAcqGm912/view?usp=sharing"  target="_blank" class="btn btn-outline-primary btn-sm" aria-current="page"> 4 ACC  <i class="bi bi-cloud-arrow-down "></i></a>
                                       </div>
                                         
 
